PHPOE-2075 - Fixed safari toolbar shifted at the bottom by removing .safari from the layout.css, update the panel accordion, page header, breadcrumb and add in toolbar input css, remove bold from the select dropdown on the panel toolbar, recompile master.min.

--- a/plugins/OpenEmis/webroot/css/component/component.breadcrumb.css
+++ b/plugins/OpenEmis/webroot/css/component/component.breadcrumb.css
@@ -45,7 +45,11 @@
 .treemap-breadcrumb {
     background: none;
     margin: 0;
-    padding: 5px 10px;
+    padding: 14px 10px;
+    height: 40px;
+    font-weight: normal;
+    font-size: 12px;
+    vertical-align: middle;
 }
 
 .treemap-breadcrumb li a,
